# rgb-effects

./: CMakeLists.txt
include/: colors.h  effects.h  explosions.h  fire.h  garland.h  hue_scroll.h  interface.h  meteors.h  utils.h
include/effects/: explosions.h  fire.h  garland.h  hue_scroll.h  meteors.h
src/: colors.c  effects.c  explosions.c  fire.c  garland.c  hue_scroll.c  meteors.c  utils.c
